--- a/style/catalog.css
+++ b/style/catalog.css
@@ -1,5 +1,39 @@
 /* Estilização do menu de catálogo */
+* {}
 
-.main{
+.main {
     padding: 2.5%;
+    height: auto;
+}
+
+.inline {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 0;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: -moz-fit-content;
+    width: fit-content;
+    border-radius: 8px;
+    margin-top: 2.5%;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    opacity: 50%;
+}
+
+.container {
+    padding: 16px;
+}
+
+.temp {
+    border-radius: 8px 8px 0 0;
+    background-color: white;
+    width: 256px;
+    height: 256px;
 }
