--- a/global.css
+++ b/global.css
@@ -8,8 +8,8 @@ Assim, fica mais fácil de organizar e reutilizar códigos */
     --div-color: #373737;
     --nav-color: #0F0F0F;
     --navbar-hover-color: #a0a0a0;
-    --button-border: 8px;
-    --ui-border: 16px;
+    --button-border: 12px;
+    --ui-border: 24px;
 }
 
 * {
@@ -20,10 +20,16 @@ Assim, fica mais fácil de organizar e reutilizar códigos */
     transition: 5ms;
 }
 
-body {
-    background-color: var(--background-color);
+html {
+    height: 100%;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    background-color: var(--background-color);
+}
 
 div.main {
     background-color: var(--div-color);
@@ -52,6 +58,7 @@ a button {
 footer {
     background-color: var(--nav-color);
     padding: 2.5%;
+    margin-top: auto;
 }
 
 ::-webkit-scrollbar {
