--- a/style/tetris.css
+++ b/style/tetris.css
@@ -1,10 +1,8 @@
-/* Reseta estilos padrão do navegador */
 body,
 html {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: 'Arial', sans-serif;
 }
 
 #game_container {
@@ -17,31 +15,23 @@ html {
 #tetris {
     display: none;
     border-radius: 10px;
-    /* Bordas arredondadas */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    /* Sombra do canvas */
     background-color: #000;
-    /* Fundo preto para o canvas */
 }
 
 button {
     background-color: var(--main-color);
     border: none;
     color: white;
-    padding: 10px 20px;
-    text-align: center;
     text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s, transform 0.2s;
+}
+
+.send {
+    width: 50%;
 }
 
 button:hover {
     background-color: var(--main-hover-color);
-    transform: scale(1.05);
 }
 
 button:disabled {
@@ -63,7 +53,7 @@ button:disabled {
     display: none;
 }
 
-.modal {
+.popUp {
     display: none;
     position: fixed;
     z-index: 1;
@@ -73,49 +63,46 @@ button:disabled {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
-.modal-content {
+.popUp-content {
     position: relative;
-    background-color: var(--nav-color);
     border-radius: var(--ui-border);
     margin: auto;
-    padding: 0;
-    width: 40%;
-    animation-duration: 0.4s
+    padding: 32px;
+    width: 30%;
+    background-color: white;
 }
 
 .close {
-    color: white;
+    color: black;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
 .close:hover {
-    color: #000;
+    color: var(--main-color);
     text-decoration: none;
     cursor: pointer;
 }
 
-.modal-header {
+.popUp-header {
     padding: 2px 16px;
-    background-color: var(--main-color);
     border-radius: var(--ui-border) var(--ui-border) 0 0;
-    color: white;
 }
 
-.modal-body {
+.popUp-body {
     padding: 2px 16px;
 }
 
-.modal-footer {
+.popUp-footer {
     padding: 2px 16px;
-    color: white;
 }
 
-.inline {
-    display: flex;
+.popUp h2,
+.popUp label,
+.popUp p {
+    color: black;
 }
