--- a/style/catalog.css
+++ b/style/catalog.css
@@ -23,6 +23,10 @@
     margin-right: 50px;
 }
 
+.card a {
+    text-decoration: none;
+}
+
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     opacity: 50%;
