--- a/style/tetris.css
+++ b/style/tetris.css
@@ -1,5 +1,6 @@
 #game_container {
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -8,24 +9,6 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     background-color: #000;
-}
-
-.center{
-    margin: auto;
-}
-
-.start {
-    font-weight: bold;
-    width: 256px;
-    height: 64px;
-}
-
-.send {
-    width: 100%;
-}
-
-.input {
-    width: 100%;
 }
 
 button:hover {
@@ -53,69 +36,4 @@ button:disabled {
     margin: 20px;
     font-weight: bold;
     display: none;
-}
-
-.popUp {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-.popUp-content {
-    position: relative;
-    border-radius: var(--ui-border);
-    margin: auto;
-    padding: 32px;
-    width: 25vw;
-    height: 33vh;
-    background-color: white;
-}
-
-.close {
-    color: black;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover {
-    color: var(--main-color);
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.popUp-header {
-    padding: 2px 16px;
-    border-radius: var(--ui-border) var(--ui-border) 0 0;
-}
-
-.popUp-body {
-    padding: 2px 16px;
-}
-
-.popUp-footer {
-    padding: 2px 16px;
-}
-
-.popUp h2,
-.popUp label,
-.popUp p {
-    color: black;
-}
-
-.tRight {
-    float: right;
-    width: 50%;
-}
-
-.tLeft {
-    float: left;
-    width: 50%;
 }
