--- a/style/snake.css
+++ b/style/snake.css
@@ -1,9 +1,16 @@
-body {
-    text-align: center;
-    text-align: left;
-}
-
 #board {
     border-radius: var(--ui-border);
     margin: auto;
+
+    display: none;
+}
+
+#score {
+    display: none;
+}
+
+#game_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
