--- a/global.css
+++ b/global.css
@@ -61,6 +61,11 @@ a button {
     font-weight: bold;
 }
 
+.tabActive {
+    background-color: var(--nav-color);
+    font-weight: bold;
+}
+
 footer {
     background-color: var(--nav-color);
     padding: 2.5%;
