--- a/global.css
+++ b/global.css
@@ -27,9 +27,13 @@ Assim, fica mais fácil de organizar e reutilizar códigos */
 
 html {
     height: 100%;
+    min-height: 100%;
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
     background-color: var(--background-color);
 }
 
